# FFT-Medical-Images

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  Notes.md  README.md  app  script.py
csv/: A.csv  output-2d-temp4.csv  output-2d-width4.csv  output-matlab.txt  output2048.csv  output4.csv  sus.csv  temp_test.csv  test128.csv  test2048.csv  test512.csv  testm4x4_1234.csv  testmat4x4.csv
html/: ComplexMatrix_8hpp_source.html  Ctz_8hpp_source.html  FFT_8hpp_source.html  FFT__Traits_8hpp_source.html  Filtering__traits_8hpp_source.html  Image_8hpp_source.html  Imaging__Traits_8hpp_source.html  MDFFT_8hpp_source.html  MyComplexArray_8hpp_source.html  Parallel__configuration_8hpp_source.html  Utilities_8hpp_source.html  annotated.html  classComplexMatrix-members.html  classComplexMatrix.html  classImage-members.html  classImage.html  classMyComplexArray-members.html  classMyComplexArray.html  classMyComplexArray__coll__graph.map  classMyComplexArray__coll__graph.md5  classSolver_1_1Ctz-members.html  classSolver_1_1Ctz.html  classSolver_1_1FFT-members.html  classSolver_1_1FFT.html  classSolver_1_1MDFFT-members.html  classSolver_1_1MDFFT.html  classTest_1_1AnisotropicTest-members.html  classTest_1_1AnisotropicTest.html  classTest_1_1AnisotropicTest__coll__graph.map  classTest_1_1AnisotropicTest__coll__graph.md5  classTest_1_1GaussTest-members.html  classTest_1_1GaussTest.html  classTest_1_1GaussTest__coll__graph.md5  classTest_1_1GaussTest__inherit__graph.map  classTest_1_1GenericTest-members.html  classTest_1_1GenericTest.html  classTest_1_1GenericTest__inherit__graph.map  classTest_1_1GenericTest__inherit__graph.md5  classTest_1_1KuwaharaTest-members.html  classTest_1_1KuwaharaTest.html  (+55 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+9 more)
latex/: annotated.tex  classComplexMatrix.tex  classImage.tex  classMyComplexArray.tex  classMyComplexArray__inherit__graph.md5  classSolver_1_1Ctz.tex  classSolver_1_1FFT.tex  classSolver_1_1MDFFT.tex  classTest_1_1AnisotropicTest.tex  classTest_1_1AnisotropicTest__coll__graph.md5  classTest_1_1GaussTest.tex  classTest_1_1GaussTest__inherit__graph.md5  classTest_1_1GenericTest.tex  classTest_1_1GenericTest__inherit__graph.md5  classTest_1_1KuwaharaTest.tex  classTest_1_1KuwaharaTest__inherit__graph.md5  classTest_1_1SobelTest.tex  classTest_1_1SobelTest__inherit__graph.md5  hierarchy.tex  md_README.tex  refman.tex  structstbi__io__callbacks.tex
src/: CSV_Reader.cpp  CSV_Reader.hpp  ComplexMatrix.cpp  ComplexMatrix.hpp  Ctz.cpp  Ctz.hpp  FFT.cpp  FFT.hpp  FFT_Traits.hpp  Filtering_traits.hpp  Image.cpp  Image.hpp  Imaging_Traits.hpp  MDFFT.cpp  MDFFT.hpp  MyComplexArray.hpp  Parallel_configuration.hpp  example.csv  main.cpp  main2.cpp
(+17 files in other folders)
